// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchHelpers converSearchStringToObject converts search string 1`] = `
{
  "contextFilters": [],
  "contextTypes": [],
  "fallback": "true",
  "grepCodes": [],
  "language": "nb",
  "languageFilter": [
    "1",
    "2",
    "3",
  ],
  "page": "3",
  "programs": [],
  "query": "test",
  "relevance": [],
  "resourceTypes": [],
  "subjects": [
    "urn:test:3",
    "urn:test:1",
    "urn:test:2",
  ],
}
`;

exports[`searchHelpers converSearchStringToObject with no location 1`] = `
{
  "contextFilters": [],
  "contextTypes": [],
  "fallback": "true",
  "grepCodes": [],
  "language": "nb",
  "languageFilter": [],
  "programs": [],
  "relevance": [],
  "resourceTypes": [],
  "subjects": [],
}
`;

exports[`searchHelpers searchResultToLinkProps article 1`] = `
{
  "to": "/article/300",
}
`;

exports[`searchHelpers searchResultToLinkProps learningpath 1`] = `
{
  "to": "/learningpath/500",
}
`;
